--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,16 +7,13 @@
             <h1><a href="">From Django Girls Tutorial</a></h1>
         </div>
 
-        <div>
-            <p>published: 30.08.2015, 20:15</p>
-            <h2><a href="">My first post</a></h2>
-            <p>Here it's coming. My first post.</p>
-        </div>
-
-        <div>
-            <p>published: 30.08.2015, 20:15</p>
-            <h2><a href="">My second post</a></h2>
-            <p>Second post.</p>
-        </div>
+		{% for post in posts %}
+			<div>
+				<p>published: {{ post.published_date }}</p>
+				<h1><a href="">{{ post.title }}</a></h1>
+				<p>{{ post.text|linebreaks }}</p>
+			</div>
+		{% endfor %}
+		
     </body>
 </html>
